{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 2384,
  "lineage": "53b0d672-5184-ce58-6700-5ab48be0fd8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072b7a2ffac6318c1",
            "arn": "arn:aws:ec2:eu-central-1:557403669124:instance/i-0537419a2d965e3d1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0537419a2d965e3d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058f97350eda0403c",
            "private_dns": "ip-10-0-1-191.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-18-195-95-69.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.95.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-09928ba46c1fd00db",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a216592c21ef840",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0745f0243ae82ff92"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072b7a2ffac6318c1",
            "arn": "arn:aws:ec2:eu-central-1:557403669124:instance/i-0c40c876480b322ff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c40c876480b322ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0549da5485ecfcb32",
            "private_dns": "ip-10-0-1-249.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-35-156-149-46.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.149.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-0ffd0ef6c3b8d72e8",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a216592c21ef840",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0745f0243ae82ff92"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bg-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:internet-gateway/igw-0636ce2ab4812af1a",
            "id": "igw-0636ce2ab4812af1a",
            "owner_id": "557403669124",
            "tags": {
              "Name": "bg-igw"
            },
            "tags_all": {
              "Name": "bg-igw"
            },
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bluegreenlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:loadbalancer/app/bluegreenlb/587656afc425ca8f",
            "arn_suffix": "app/bluegreenlb/587656afc425ca8f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bluegreenlb-1702228994.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:loadbalancer/app/bluegreenlb/587656afc425ca8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bluegreenlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0745f0243ae82ff92"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a216592c21ef840"
              },
              {
                "subnet_id": "subnet-0855028c66099af30"
              }
            ],
            "subnets": [
              "subnet-02a216592c21ef840",
              "subnet-0855028c66099af30"
            ],
            "vpc_id": "vpc-0513d35b21887e175",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_instance.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_subnet.bg-subnet-pub-2",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:listener/app/bluegreenlb/587656afc425ca8f/97077f619ed813ae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 1,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:listener/app/bluegreenlb/587656afc425ca8f/97077f619ed813ae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:loadbalancer/app/bluegreenlb/587656afc425ca8f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.blue",
            "aws_instance.green",
            "aws_lb.bluegreenlb",
            "aws_lb_target_group.blue",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_subnet.bg-subnet-pub-2",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "arn_suffix": "targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "arn_suffix": "targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658084200000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658422100000022",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115704959300000034",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657714400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565779180000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658565100000027",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565832950000001c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658382800000020",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658103000000012",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115705313100000035",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658384200000021",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565830200000001a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565836050000001d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115704859500000033",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411572541910000006f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658519500000025",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657776700000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411570432070000002f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565781310000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411570428140000002e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411570418330000002d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657783100000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565836310000001e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565862140000002b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565780790000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658114400000014",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115704539100000032",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658515900000024",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657629900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658114500000015",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565863420000002c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658279100000019",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411571205100000004d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658116100000016",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565804010000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657613500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565806260000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658102700000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115704477200000031",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565838270000001f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658599400000028",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 41,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565862140000002a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 42,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658186800000018",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 43,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115704423600000030",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 44,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657776500000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 45,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658558000000026",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 46,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658186600000017",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 47,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115705326400000036",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 48,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657761500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 49,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658114100000013",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 50,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658461700000023",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 51,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565832830000001b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 52,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115658605600000029",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 53,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-2022102411565792920000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 54,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25-20221024115657745900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/blue-tg-lb/f6467be77bd5ed25",
            "target_id": "i-0537419a2d965e3d1"
          },
          "dependencies": [
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411571509680000005a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572006550000005d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720312000000066",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572172550000006e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411571199520000004c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570818600000003c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720288100000063",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708448200000044",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411571215420000004e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720466600000067",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570868300000004a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570870220000004b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708448200000043",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720071800000060",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708448200000045",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712621500000055",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712461600000053",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720491300000068",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708448100000042",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708047200000039",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720268900000062",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708457500000047",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115707993400000038",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572117180000006d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708659600000049",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712343900000052",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572006240000005c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708531600000048",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708338700000041",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572051260000006c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570812770000003a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572006550000005e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708279100000040",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115707919600000037",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570819110000003d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712318600000051",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712778800000057",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572049620000006a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115714860500000058",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570819120000003e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115714978700000059",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 41,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572004600000005b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 42,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720307300000064",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 43,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712479000000054",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 44,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570818600000003b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 45,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712626500000056",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 46,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115712262200000050",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 47,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411570819120000003f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 48,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720495000000069",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 49,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720309900000065",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 50,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115708448200000046",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 51,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-20221024115720251800000061",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 52,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411571216600000004f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 53,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572007170000005f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        },
        {
          "index_key": 54,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5-2022102411572051230000006b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:557403669124:targetgroup/green-tg-lb/596aa7d73a0d84a5",
            "target_id": "i-0c40c876480b322ff"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.ssh-allowed",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bg-pub-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:route-table/rtb-0fb1bfcbc437181fc",
            "id": "rtb-0fb1bfcbc437181fc",
            "owner_id": "557403669124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0636ce2ab4812af1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bg-pub-crt"
            },
            "tags_all": {
              "Name": "bg-pub-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bg-igw",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bg-crta-pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057eb57008323ebce",
            "route_table_id": "rtb-0fb1bfcbc437181fc",
            "subnet_id": "subnet-02a216592c21ef840"
          },
          "dependencies": [
            "aws_internet_gateway.bg-igw",
            "aws_route_table.bg-pub-crt",
            "aws_subnet.bg-subnet-pub-1",
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:security-group/sg-0745f0243ae82ff92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0745f0243ae82ff92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221024115614513800000001",
            "name_prefix": "terraform-",
            "owner_id": "557403669124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bg-subnet-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:subnet/subnet-02a216592c21ef840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a216592c21ef840",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557403669124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bg-subnet-pub-1"
            },
            "tags_all": {
              "Name": "bg-subnet-pub-1"
            },
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bg-subnet-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:subnet/subnet-0855028c66099af30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0855028c66099af30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557403669124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bg-subnet-pub-2"
            },
            "tags_all": {
              "Name": "bg-subnet-pub-2"
            },
            "vpc_id": "vpc-0513d35b21887e175"
          },
          "dependencies": [
            "aws_vpc.bluegreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bluegreen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:557403669124:vpc/vpc-0513d35b21887e175",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093b8f2dbf6a17057",
            "default_route_table_id": "rtb-0c79548cffdc33e2b",
            "default_security_group_id": "sg-00f2766b2e5d1482c",
            "dhcp_options_id": "dopt-09bb01f24c9d55e3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0513d35b21887e175",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c79548cffdc33e2b",
            "owner_id": "557403669124",
            "tags": {
              "Name": "bluegreen"
            },
            "tags_all": {
              "Name": "bluegreen"
            }
          }
        }
      ]
    }
  ]
}